--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Recharge airtime, buy data bundles for MTN, Airtel, Glo, and enjoy Sportybet gaming - all in one place!">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📱</text></svg>">
+    <!-- Paystack Integration -->
+    <script src="https://js.paystack.co/v1/inline.js"></script>
 </head>
 <body>
     <!-- Header -->
@@ -151,6 +153,8 @@
     </footer>
 
     <script src="js/api-service.js"></script>
+    <script src="js/config.js"></script>
+    <script src="js/paystack-service.js"></script>
     <script src="js/main.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/realtime-features.js"></script>
