🔄 Trigger GitHub Pages deployment

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <!-- PWA Version 1.0 - Mobile App Ready -->
     <title>UtilityHub - Airtime, Data & Sportybet</title>
     <meta name="description" content="Recharge airtime, buy data bundles for MTN, Airtel, Glo, and enjoy Sportybet gaming - all in one place!">
     
