--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
     <script src="js/paystack-service.js"></script>
     <script src="js/main.js"></script>
     <script src="js/auth.js"></script>
+    <script src="js/oauth-service.js"></script>
     <script src="js/pwa.js"></script>
     <script>
         // Only load external API components if enabled in config
