--- a/login.html
+++ b/login.html
@@ -205,6 +205,7 @@
     <script src="js/api-service.js"></script>
     <script src="js/main.js"></script>
     <script src="js/auth.js"></script>
+    <script src="js/oauth-service.js"></script>
     <script src="js/realtime-features.js"></script>
     <script src="js/utility-widget.js"></script>
     
@@ -502,5 +503,52 @@
             }
         }
     </style>
+
+    <!-- OAuth Integration Script -->
+    <script>
+        // OAuth Login Functions
+        async function loginWithGoogle() {
+            try {
+                if (window.oauthService) {
+                    await window.oauthService.loginWithGoogle();
+                } else {
+                    console.error('OAuth service not loaded');
+                    alert('OAuth service is initializing. Please try again in a moment.');
+                }
+            } catch (error) {
+                console.error('Google login error:', error);
+                alert('Google login failed. Please try again.');
+            }
+        }
+
+        async function loginWithFacebook() {
+            try {
+                if (window.oauthService) {
+                    await window.oauthService.loginWithFacebook();
+                } else {
+                    console.error('OAuth service not loaded');
+                    alert('OAuth service is initializing. Please try again in a moment.');
+                }
+            } catch (error) {
+                console.error('Facebook login error:', error);
+                alert('Facebook login failed. Please try again.');
+            }
+        }
+
+        // Initialize OAuth when page loads
+        document.addEventListener('DOMContentLoaded', function() {
+            // Create hidden div for Google Sign-In button
+            const googleButtonDiv = document.createElement('div');
+            googleButtonDiv.id = 'google-signin-button';
+            googleButtonDiv.style.display = 'none';
+            document.body.appendChild(googleButtonDiv);
+
+            // Initialize OAuth services
+            if (window.oauthService) {
+                window.oauthService.initializeGoogle();
+                window.oauthService.initializeFacebook();
+            }
+        });
+    </script>
 </body>
 </html>
