--- a/status.html
+++ b/status.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UtilityHub - Test</title>
+    <title>Pay4me - Test</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -39,7 +39,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🚀 UtilityHub is Live!</h1>
+        <h1>🚀 Pay4me is Live!</h1>
         <p>Your utility site is successfully deployed on GitHub Pages!</p>
         <p><strong>All systems operational!</strong></p>
         
