--- a/airtime.html
+++ b/airtime.html
@@ -70,7 +70,14 @@
                     <!-- Phone Number -->
                     <div class="form-group">
                         <label for="phoneNumber">Phone Number</label>
-                        <input type="tel" id="phoneNumber" name="phoneNumber" placeholder="08012345678" required>
+                        <div style="display: flex; gap: 0.5rem; margin-bottom: 0.5rem;">
+                            <input type="tel" id="phoneNumber" name="phoneNumber" placeholder="08012345678" required style="flex: 1;">
+                            <button type="button" id="useMyPhone" class="my-phone-btn">📱 My Phone</button>
+                        </div>
+                        <div style="margin-bottom: 0.5rem;">
+                            <button type="button" id="saveMyPhone" class="save-phone-btn">💾 Save as My Phone</button>
+                            <span id="myPhoneStatus" class="phone-status"></span>
+                        </div>
                         <small style="color: #666; font-size: 0.9rem;">Enter your 11-digit phone number</small>
                     </div>
 
