--- a/data.html
+++ b/data.html
@@ -70,7 +70,14 @@
                     <!-- Phone Number -->
                     <div class="form-group">
                         <label for="dataPhoneNumber">Phone Number</label>
-                        <input type="tel" id="dataPhoneNumber" name="dataPhoneNumber" placeholder="08012345678" required>
+                        <div style="display: flex; gap: 0.5rem; margin-bottom: 0.5rem;">
+                            <input type="tel" id="dataPhoneNumber" name="dataPhoneNumber" placeholder="08012345678" required style="flex: 1;">
+                            <button type="button" id="useMyPhoneData" class="my-phone-btn">📱 My Phone</button>
+                        </div>
+                        <div style="margin-bottom: 0.5rem;">
+                            <button type="button" id="saveMyPhoneData" class="save-phone-btn">💾 Save as My Phone</button>
+                            <span id="myPhoneStatusData" class="phone-status"></span>
+                        </div>
                         <small style="color: #666; font-size: 0.9rem;">Enter the phone number to receive data</small>
                     </div>
 
