Implement real authentication system with email/phone verification
✅ REMOVE DEMO/SIMULATION:
- Remove all simulation/demo recharge functionality
- Replace with real API calls requiring authentication
- Remove fake user accounts and demo features

✅ REAL AUTHENTICATION SYSTEM:
- Add /api/auth endpoint with full user management
- Email AND phone number verification options
- JWT token-based authentication
- Real password hashing with bcryptjs
- OTP generation and verification system

✅ VERIFICATION FEATURES:
- Email OTP via SendGrid/SMTP
- SMS OTP via Termii/Twilio (Nigerian providers)
- 10-minute OTP expiration
- Resend OTP functionality
- Beautiful verification form UI

✅ FRONTEND UPDATES:
- Updated login.html with verification method selection
- Real authentication checks on all recharge pages
- Protected routes requiring login
- Token-based API authentication
- Transaction history with real data

✅ API INTEGRATION:
- All recharge calls now use Bearer tokens
- Real provider integration (HustleSIM, Paystack Bills, VTPass)
- Proper error handling and user feedback
- No more simulation/demo modes

Users must now create real accounts with email/phone verification to use the platform!

--- a/login.html
+++ b/login.html
@@ -126,6 +126,21 @@
                             </div>
                         </div>
 
+                        <div class="form-group">
+                            <label>Verification Method</label>
+                            <div style="display: flex; gap: 1rem; margin-top: 0.5rem;">
+                                <label style="display: flex; align-items: center; cursor: pointer;">
+                                    <input type="radio" name="verificationType" value="email" checked style="margin-right: 0.5rem;">
+                                    📧 Email
+                                </label>
+                                <label style="display: flex; align-items: center; cursor: pointer;">
+                                    <input type="radio" name="verificationType" value="phone" style="margin-right: 0.5rem;">
+                                    📱 SMS
+                                </label>
+                            </div>
+                            <small style="color: #666;">Choose how you want to receive your verification code</small>
+                        </div>
+
                         <div class="form-options">
                             <div class="checkbox-wrapper">
                                 <input type="checkbox" id="agreeTerms" name="agreeTerms" required>
