--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
     <!-- Styles -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/pwa.css">
-    
-    <!-- Paystack Integration -->
-    <script src="https://js.paystack.co/v1/inline.js"></script>
 </head>
 <body>
     <!-- Header -->
@@ -57,6 +54,9 @@
             <div class="container">
                 <h1>Welcome to Pay4me</h1>
                 <p>Your one-stop solution for airtime recharge, data purchases, and sports betting. Fast, secure, and convenient!</p>
+                <div style="background: linear-gradient(135deg, #28a745, #20c997); color: white; padding: 0.8rem 1.5rem; border-radius: 25px; margin: 1rem auto; display: inline-block; font-weight: 500; box-shadow: 0 4px 15px rgba(40, 167, 69, 0.3);">
+                    🟢 Live Service • Powered by ClubKonnect API
+                </div>
                 <a href="#services" class="btn">Get Started</a>
             </div>
         </section>
@@ -172,7 +172,6 @@
 
     <script src="js/api-service.js"></script>
     <script src="js/config.js"></script>
-    <script src="js/paystack-service.js"></script>
     <script src="js/main.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/oauth-service.js"></script>
