--- a/login.html
+++ b/login.html
@@ -218,6 +218,7 @@
     </footer>
 
     <script src="js/api-service.js"></script>
+    <script src="js/config.js"></script>
     <script src="js/main.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/oauth-service.js"></script>
