Configure custom domain pay4me.com.ng - Update all URLs and CORS settings

--- a/test-auth.html
+++ b/test-auth.html
@@ -41,7 +41,7 @@
     </div>
 
     <script>
-        const API_BASE = 'https://payme-qxwwx7g64-kestine1s-projects.vercel.app/api';
+        const API_BASE = 'https://api.pay4me.com.ng';
 
         async function testHealth() {
             const resultDiv = document.getElementById('healthResult');
