Fix registration - revert to working Vercel API URLs and open CORS

--- a/test-auth.html
+++ b/test-auth.html
@@ -41,7 +41,7 @@
     </div>
 
     <script>
-        const API_BASE = 'https://api.pay4me.com.ng';
+        const API_BASE = 'https://payme-27jxb8ful-kestine1s-projects.vercel.app/api';
 
         async function testHealth() {
             const resultDiv = document.getElementById('healthResult');
