--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
                             <label for="loginPassword">Password</label>
                             <div class="password-input-wrapper">
                                 <input type="password" id="loginPassword" name="loginPassword" placeholder="Enter your password" required>
-                                <button type="button" class="password-toggle" onclick="togglePassword('loginPassword')">👁️</button>
+                                <button type="button" class="password-toggle" data-input-id="loginPassword">👁️</button>
                             </div>
                         </div>
 
@@ -113,7 +113,7 @@
                             <label for="signupPassword">Password</label>
                             <div class="password-input-wrapper">
                                 <input type="password" id="signupPassword" name="signupPassword" placeholder="Create a password" required>
-                                <button type="button" class="password-toggle" onclick="togglePassword('signupPassword')">👁️</button>
+                                <button type="button" class="password-toggle" data-input-id="signupPassword">👁️</button>
                             </div>
                             <small class="password-requirements">Password must be at least 8 characters long</small>
                         </div>
@@ -122,7 +122,7 @@
                             <label for="confirmPassword">Confirm Password</label>
                             <div class="password-input-wrapper">
                                 <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm your password" required>
-                                <button type="button" class="password-toggle" onclick="togglePassword('confirmPassword')">👁️</button>
+                                <button type="button" class="password-toggle" data-input-id="confirmPassword">👁️</button>
                             </div>
                         </div>
 
